refactor sql queries to async, add error handling
