# controllers/recipes.js
@@ -1,25 +1,43 @@
 const db = require('../utils/database-connection')
 
-exports.getAllRecipes = (req, res) => {
+// TODO: try to refactor try-catch blocks with this function
+async function querySql(sql, res, successMessage) {
+    try {
+        const result = await db.query(sql);
+        console.log(successMessage);
+    } catch (err) {
+        console.log(`${err.code}->${err.message}`);
+        return res.status(500).json(err);
+    }
+}
 
+exports.getAllRecipes = async function (req, res){
     const sql = `SELECT r.id, r.name, r.description, r.preparation_time FROM Recipe r;`;
-    db.query(sql, (err,rows) => {
-        if(err) throw err;
-        console.log(`Data received from Db: ${rows}`);
-        res.json(rows);
-    });
+    // await querySql(sql, res, 'Recipes fetched');
+    try {
+        const result = await db.query(sql);
+        res.json(result[0]);
+    } catch (err) {
+        return res.status(500).json(err);
+    }
 };
 
-exports.getRecipe = (req, res) => {
+exports.getRecipe = async function(req, res) {
     const sql = `SELECT r.name, r.description, r.preparation_time FROM Recipe r WHERE id = '${req.params.id}';`;
-    db.query(sql, (err,rows) => {
-        if(err) throw err;
-        console.log(`Data received from Db: ${rows}`);
-        res.json(rows);
-    });
+    try {
+        const result = await db.query(sql);
+        if(result[0].length === 0) {
+            console.log(`Recipe with id:${req.params.id} not found...`);
+            res.status(404).json(result[0]);
+        } else {
+            res.json(result[0]);
+        }
+    } catch (err) {
+        return res.status(500).json(err);
+    }
 };
 
-exports.addRecipe = (req, res) => {
+exports.addRecipe = async function(req, res) {
 
     if(!req.body) {
         res.status(400).send({ message: "Recipe body can not be empty!" });
@@ -28,31 +46,42 @@ exports.addRecipe = (req, res) => {
     const sqlRecipe = `INSERT INTO Recipe (id, name, description, preparation_time)
                 VALUES (${req.body._id}, '${req.body.name}', '${req.body.description}', ${req.body.preparationTimeInMinutes});`;
 
-
-    db.query(sqlRecipe, req.body, (err, rows) => {
-        if(err) throw err;
-        console.log(`Data added ${rows}`);
-        res.json(req.body);
-    })
+    try {
+        await db.query(sqlRecipe);
+        console.log('Recipe added');
+    } catch (err) {
+        console.log(`${err.code}->${err.message}`);
+        return res.status(500).json(err);
+    }
 
     for (const ing of req.body.ingredients) {
-        const sqlIngredients = `INSERT INTO Ingredient (id, name, amount, unit)
+
+        const sqlIngredient = `INSERT INTO Ingredient (id, name, amount, unit)
                 VALUES ('${ing._id}', '${ing.name}', ${ing.amount}, '${ing.unit}');`;
-
-        db.query(sqlIngredients, req.body, (err, rows) => {
-            console.log('ing', `'${ing._id}', '${ing.name}', ${ing.amount}, '${ing.unit}'`)
-            if(err) throw err;
-        })
-
         const sqlRecipeIngredient = `INSERT INTO RecipeIngredient (recipe_id, ingredient_id) VALUES ('${req.body._id}', '${ing._id}');`;
-        db.query(sqlRecipeIngredient, req.body, (err, rows) => {
-            if(err) throw err;
-        })
+
+        try{
+            await db.query(`${sqlIngredient}`);
+            console.log(`Ingredient added`);
+        } catch (err) {
+            console.log(`${err.code}->${err.message}`);
+            return res.status(500).json(err);
+        }
+
+        try{
+            await db.query(`${sqlRecipeIngredient}`);
+            console.log(`Ingredient added to RecipeIngredient`);
+        } catch (err) {
+            console.log(`${err.code}->${err.message}`);
+            return res.status(500).json(err);
+        }
     }
+
+    res.json(req.body);
 
 };
 
-exports.updateRecipe = (req, res) => {
+exports.updateRecipe = async function (req, res) {
 
     // update basic recipe
     const sql = `UPDATE Recipe SET 
@@ -61,53 +90,80 @@ exports.updateRecipe = (req, res) => {
      description='${req.body.description}' 
      WHERE id = ${req.params.id}`;
 
-    db.query(sql, req.body, (err, rows) => {
-        if(err) throw err;
-        console.log(`Recipe updated ${rows}`);
-        // res.json(req.body);
-    })
+    try{
+        await db.query(sql);
+        console.log(`Recipe updated`);
+    } catch (err) {
+        console.log(`${err.code}->${err.message}`);
+        return res.status(500).json(err);
+    }
 
+    // remove all old ingredients from RecipeIngredient...
     let sqlRRI = `DELETE FROM RecipeIngredient WHERE recipe_id = ${req.body._id}`;
-    db.query(sqlRRI, (err, rows) => {
-        if(err) throw err;
-        console.log(`Data deleted ${req.params._id}`);
-    })
+    try{
+        await db.query(sqlRRI);
+        console.log(`Ingredient deleted`);
+    } catch (err) {
+        console.log(`${err.code}->${err.message}`);
+        return res.status(500).json(err);
+    }
 
+    // ... and Ingredient table
     let sqlRI = 'DELETE FROM Ingredient WHERE id NOT IN (SELECT ingredient_id FROM RecipeIngredient)';
-    db.query(sqlRI, (err, rows) => {
-        if(err) throw err;
-        console.log(`Data deleted ${req.params.id}`);
-    })
+    try{
+        await db.query(sqlRI);
+        console.log(`Ingredient deleted`);
+    } catch (err) {
+        console.log(`${err.code}->${err.message}`);
+        return res.status(500).json(err);
+    }
 
+    // add new ingredients
     for(const ing of req.body.ingredients) {
 
         const sqlCrI = `INSERT INTO Ingredient (id, name, amount, unit) VALUES ('${ing._id}', '${ing.name}', ${ing.amount}, '${ing.unit}');`;
-        db.query(sqlCrI,(err, rows) => {
-            if(err) throw err;
-            console.log(`Ingredient created ${ing._id}`);
-        })
+        try{
+            await db.query(sqlCrI);
+            console.log(`Ingredients deleted`);
+        } catch (err) {
+            console.log(`${err.code}->${err.message}`);
+            return res.status(500).json(err);
+        }
 
         const sqlCrRI = `INSERT INTO RecipeIngredient (recipe_id, ingredient_id) VALUES ('${req.body._id}', '${ing._id}');`;
-        db.query(sqlCrRI, req.body, (err, rows) => {
-            if(err) throw err;
-            console.log(`RecipeIngredient created ${ing._id}`);
-        })
+        try{
+            await db.query(sqlCrRI);
+            console.log(`Ingredients deleted`);
+        } catch (err) {
+            console.log(`${err.code}->${err.message}`);
+            return res.status(500).json(err);
+        }
     }
+    res.json(req.body);
 };
 
-exports.deleteRecipe = (req, res) => {
+exports.deleteRecipe = async function(req, res) {
 
     const sql = `DELETE FROM Recipe WHERE id = ${req.params.id}`;
-    db.query(sql,(err, rows) => {
-        if(err) throw err;
-        console.log(`Data deleted ${req.params.id}`);
-    })
 
-    // remove ingredients orphans
-    let sqlRI = 'DELETE FROM Ingredient WHERE id NOT IN (SELECT ingredient_id FROM RecipeIngredient)';
-    db.query(sqlRI, (err, rows) => {
-        if(err) throw err;
+    try{
+        await db.query(sql);
         console.log(`Data deleted ${req.params.id}`);
-    })
+    } catch (err) {
+        console.log(`${err.code}->${err.message}`);
+        return res.status(500).json(err);
+    }
+
+    // remove ingredient orphans
+    const sqlRI = 'DELETE FROM Ingredient WHERE id NOT IN (SELECT ingredient_id FROM RecipeIngredient)';
+    try{
+        await db.query(sqlRI);
+        console.log(`Data deleted ${req.params.id}`);
+    } catch (err) {
+        console.log(`${err.code}->${err.message}`);
+        return res.status(500).json(err);
+    }
+
+    res.json(`Recipe ${req.params.id} deleted`);
 
 };
